--- a/basic.html
+++ b/basic.html
@@ -8,3 +8,16 @@
     <p>This is my first paragraph.</p>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Sample HTML Page</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <p>This is a paragraph of text on my website.</p>
+    <a href="https://www.example.com">Visit Example.com</a>
+    <img src="https://www.example.com/image.jpg" alt="Sample Image">
+</body>
+</html>
