adding all files by using .

--- a/basic.html
+++ b/basic.html
@@ -21,3 +21,13 @@
     <img src="https://www.example.com/image.jpg" alt="Sample Image">
 </body>
 </html>
+
+create a tabul:
+
+CREATE TABLE Students (
+    StudentID INT PRIMARY KEY,
+    FirstName VARCHAR(50),
+    LastName VARCHAR(50),
+    Age INT,
+    Grade CHAR(1)
+);
